# Finance-Engine-in-C--

./: AAPL_1y_1d.csv  AAPL_1y_1d.xlsx  AAPL_20y_1d.xlsx  ImprovedClassMonteCarlo.cpp  MonteCarlo  MonteCarlo.cpp  README.md  Vanilla.cpp  Vanilla.hpp  simpleI  simpleI.cpp
MonteCarlo.dSYM/Contents/Resources/DWARF/: MonteCarlo
MonteCarlo.dSYM/Contents/Resources/Relocations/aarch64/: MonteCarlo.yml
MonteCarloR/: CMakeLists.txt  main.cpp
importData/: CollectData.py  MonteCarlo.ipynb
subsim_project/: CMakeLists.txt  model.xml
subsim_project/include/: montecarlo.hpp  openspiel_adapter.hpp  subsim.hpp
subsim_project/src/: example.cpp  main.cpp  montecarlo.cpp  openspiel_test.cpp  subsim.cpp
